corrected spacing and margins. Added hover to vid

--- a/Ransomware.css
+++ b/Ransomware.css
@@ -160,7 +160,7 @@ h1{
         display: none;
     }
     .mobile-nav {
-         margin-top: -35px; /* This works. Revise this, dont think this is best practise */
+         margin-top: -25px; /* This works. Revise this, dont think this is best practise */
     }
 }
 
@@ -218,10 +218,16 @@ h1{
     display: flex;
 }
 
+.video-container:hover{
+    outline: 5px solid #BF44D4;
+    border-radius: 10px;
+}
+
 .Rans-video h1{
     font-size: 50px;
     text-align: center;
     margin-top: 100px;
+    margin-bottom: 20px;
 }
 
 
@@ -231,28 +237,26 @@ h1{
 .Rans-quiz h1{
     font-size: 50px;
     text-align: center;
-    margin-top: 300px;
+    margin-top: 200px;
+    margin-bottom: 20px;
 }
 
 
 .Rans-quiz h3 {
     text-align: center;
     padding-bottom: 50px;
-    padding-top: 20px;
     font-size: 30px;
     margin-left: 20px;
-    margin: 20px;
 }
 
 
 .Rans-quiz {
     text-align: center;
-    padding-bottom: 100px;
+    margin-bottom: 200px;
 }
 
 
 .button-quiz{
-    margin-top: 40px;
     border-radius: 20px;
     font-size: 25px;
     background-color: #BF44D4;
